# tasty-api

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/tasty_api/: __about__.py  data_models.py  feed.py  recipe.py  tag.py  tip.py
tests/: __init__.py  test_feed.py  test_tag.py
