[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tasty-api"
dynamic = ["version"]
description = "A typed wrapper for the Tasty API."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["api", "recipes", "cooking", "wrapper"]
authors = [{ name = "Kian Khadempour", email = "kiankhadempour@gmail.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Intended Audience :: Developers",
]
dependencies = ["requests>=2.32.2", "pydantic>=2.7.1"]

[project.urls]
Documentation = "https://github.com/KianKhadempour/tasty-api#readme"
Issues = "https://github.com/KianKhadempour/tasty-api/issues"
Source = "https://github.com/KianKhadempour/tasty-api"

[tool.hatch.version]
path = "src/tasty_api/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tasty_api tests}"

[tool.hatch.envs.test]
dependencies = ["pytest>=8.2.1", "pytest-cov>=5.0.0"]
[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]


[tool.coverage.run]
source_pkgs = ["tasty_api", "tests"]
branch = true
parallel = true
omit = ["src/tasty_api/__about__.py"]

[tool.coverage.paths]
tasty_api = ["src/tasty_api", "*/tasty-api/src/tasty_api"]
tests = ["tests", "*/tasty-api/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
